--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+# dir
 /node_modules
 /public/hot
 /public/storage
 /storage/*.key
 /vendor
-_ide_helper.php
+
+# file
 .env
 .env.backup
 .phpunit.result.cache
@@ -12,3 +14,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+composer.lock
+
+# ide helper
+_ide_helper.php
+.phpstorm.meta.php
